# tsc

./: .gitignore  CMakeLists.txt  README.md  makefile  test.cpp  test_source.c
ast/: grammar.txt  lex.yy.cpp  lex.yy.h  main.cc  main.cpp  makefile  makefile_backup  node.h  parser.cc  parser.cpp  parser.h  semantics_analysis.cc  semantics_analysis.cpp  semantics_analysis.h  test.cpp  test_source.c  token.cpp  token.h  tsc.l  tsc.tab.cpp  tsc.tab.hpp  tsc.y
calculator_demo/: CMakeLists.txt  a.cpp  a.h  a.txt  lex.yy.cpp  lex.yy.h  makefile  makefile_backup  makefile_without_flex_yacc_generated  tsc.l  tsc.tab.cpp  tsc.tab.hpp  tsc.y
test_sources/: test.c  test1.c  test2.c  test3.c  test4.c
